<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/black"
    >

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/black"
        android:gravity="end|bottom"
        android:padding="15dp"
        android:textColor="@color/bg5"
        android:textSize="45sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnAC"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/bg5"
            android:layout_margin="2dp"
            android:text="@string/clear"
            android:textColor="@color/black"
            android:onClick="onClear"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnAbsolute"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/bg5"
            android:layout_margin="2dp"
            android:text="@string/absolute"
            android:textColor="@color/black"
            android:onClick="onNothing"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnPercent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/bg5"
            android:layout_margin="2dp"
            android:text="@string/percent"
            android:textColor="@color/black"
            android:onClick="onNothing"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/bg1"
            android:layout_margin="2dp"
            android:text="@string/div"
            android:textColor="@color/white"
            android:onClick="onOperator"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/bg4"
            android:layout_margin="2dp"
            android:text="@string/_7"
            android:textColor="@color/bg1"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/bg4"
            android:layout_margin="2dp"
            android:text="@string/_8"
            android:textColor="@color/bg1"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/bg4"
            android:layout_margin="2dp"
            android:text="@string/_9"
            android:textColor="@color/bg1"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnTimes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/bg1"
            android:layout_margin="2dp"
            android:text="@string/times"
            android:textColor="@color/white"
            android:onClick="onOperator"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/bg4"
            android:layout_margin="2dp"
            android:text="@string/_4"
            android:textColor="@color/bg1"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/bg4"
            android:layout_margin="2dp"
            android:text="@string/_5"
            android:textColor="@color/bg1"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/bg4"
            android:layout_margin="2dp"
            android:text="@string/_6"
            android:textColor="@color/bg1"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/bg1"
            android:layout_margin="2dp"
            android:text="@string/minus"
            android:textColor="@color/white"
            android:onClick="onOperator"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/bg4"
            android:layout_margin="2dp"
            android:text="@string/_1"
            android:textColor="@color/bg1"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/bg4"
            android:layout_margin="2dp"
            android:text="@string/_2"
            android:textColor="@color/bg1"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/bg4"
            android:layout_margin="2dp"
            android:text="@string/_3"
            android:textColor="@color/bg1"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/bg1"
            android:layout_margin="2dp"
            android:text="@string/plus"
            android:textColor="@color/white"
            android:onClick="onOperator"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:backgroundTint="@color/bg4"
            android:layout_margin="2dp"
            android:text="@string/_0"
            android:textColor="@color/bg1"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/bg4"
            android:layout_margin="2dp"
            android:text="@string/dot"
            android:textColor="@color/bg1"
            android:onClick="onDecimalPoint"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/bg1"
            android:layout_margin="2dp"
            android:text="@string/equal"
            android:textColor="@color/white"
            android:onClick="onEqual"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

</LinearLayout>